# zip_radius_tool

./: .gitignore  README.md  pyproject.toml
zip_radius_app/: manage.py  requirements.txt
zip_radius_app/zip_app/: apps.py  urls.py  views.py
zip_radius_app/zip_app/templates/zip_app/: index.html
zip_radius_app/zip_radius_app/: asgi.py  settings.py  urls.py  wsgi.py
