[tool.poetry]
name = "zip-radius-app"
version = "0.1.0"
description = "A web-hosted tool for generating a list of zips in a defined range of a list of original zips."
authors = ["Louis Nix II"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
django = "^4.2"
uszipcode = "^1.0.1"
pandas = "^2.2.0"
sqlalchemy-mate = "<2.0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
